fix: Fix color contrast issue and image sizing

--- a/auctions/static/auctions/styles.scss
+++ b/auctions/static/auctions/styles.scss
@@ -29,6 +29,10 @@ button {
     padding: 1rem;
 }
 
+.nav-link {
+    color: $base-text-color;
+}
+
 .btn {
     display: inline-block;
     padding: 0 1rem;
@@ -68,4 +72,9 @@ button {
 .listings-img {
     max-width: 400px;
     max-height: 200px;
+}
+
+.listing-img {
+    max-width: 40%;
+    max-height: 40%;
 }
